--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@tsamantanis/react-glassmorphism": "^1.1.2",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
